# sysmon-helper-cli

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yaml
src/: main.rs
tests/: sysmon_modular_tests.rs
