[package]
name = "sysmon_cli"
version = "0.1.0"
edition = "2021"
authors = ["whiterabbit@protonmail.com"]
description = "CLI tool for Sysmon configuration conversion"

[dependencies]
sysmon_json = { git = "https://github.com/whit3rabbit/sysmon-json", branch = "main" }
clap = { version = "4.5.27", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
colored = "3.0.0"
thiserror = "2.0.11"
walkdir = "2.5.0"
indicatif = "0.17.9"
tempfile = "3.15.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.15.0"
walkdir = "2.5.0"
sysmon_validator = { git = "https://github.com/whit3rabbit/sysmon-validator", branch = "main" }